@@ -379,13 +379,15 @@ $default_tabwidth = 8;
 # quite arbitrary, so the default is to sort.
 $sort_diffs_by_filename = 1;
 
-# Bug database to update.  Currently, Bugzilla, Flyspray and TestDirector
+# Bug database to update.  Currently, Bugzilla, Flyspray, Mantis and TestDirector
 # are supported, but it is straight-forward to support other bug
 # databases.  To enable Bugzilla, set $bug_db to "bugzilla", and set
 # the following parameters to your setup.  To enable Flyspray, set
 # $bug_db to "flyspray", and set the relevant parameters.  To enable
 # TestDirectory, set $bug_db to "testdirector" and set the relevant
-# parameters.  If the $bug_db is an empty string, all bug-tracking related
+# parameters.  Likewise for Mantis, set $bug_db to "mantis".
+#
+# If the $bug_db is an empty string, all bug-tracking related
 # features will be disabled.  To allow the association of a bug ID
 # with a topic, without any physical connection to a bug database,
 # set the value to "noconnection".
@@ -394,6 +396,7 @@ $bug_db = '';
 #$bug_db = 'bugzilla';
 #$bug_db = 'flyspray';
 #$bug_db = 'testdirector';
+#$bug_db = 'mantis';
 $bug_db = 'noconnection';
 
 # Bugzilla database connection details.
